--- a/TheAdventuresOfJimmy.vcxproj
+++ b/TheAdventuresOfJimmy.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{e6280fcf-9e89-422d-ad0b-6a3373703b90}</ProjectGuid>
     <RootNamespace>TheAdventuresOfJimmy</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -142,6 +142,7 @@
     <ClCompile Include="Game Code\Sources\Ground.cpp" />
     <ClCompile Include="Game Code\Sources\Ladder.cpp" />
     <ClCompile Include="Game Code\Sources\Level.cpp" />
+    <ClCompile Include="Game Code\Sources\MovingObject.cpp" />
     <ClCompile Include="Game Code\Sources\Player.cpp" />
     <ClCompile Include="Game Code\Sources\Screw.cpp" />
     <ClCompile Include="Game Code\Sources\Web.cpp" />
@@ -160,6 +161,7 @@
     <ClInclude Include="Game Code\Headers\Ground.h" />
     <ClInclude Include="Game Code\Headers\Ladder.h" />
     <ClInclude Include="Game Code\Headers\Level.h" />
+    <ClInclude Include="Game Code\Headers\MovingObject.h" />
     <ClInclude Include="Game Code\Headers\Player.h" />
     <ClInclude Include="Game Code\Headers\Screw.h" />
     <ClInclude Include="Game Code\Headers\Web.h" />
