--- a/TheAdventuresOfJimmy.vcxproj
+++ b/TheAdventuresOfJimmy.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Game Code\Sources\MovingObject.cpp" />
     <ClCompile Include="Game Code\Sources\Player.cpp" />
     <ClCompile Include="Game Code\Sources\Screw.cpp" />
+    <ClCompile Include="Game Code\Sources\Spider.cpp" />
     <ClCompile Include="Game Code\Sources\Web.cpp" />
     <ClCompile Include="Game Code\Sources\Wood.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="Game Code\Headers\MovingObject.h" />
     <ClInclude Include="Game Code\Headers\Player.h" />
     <ClInclude Include="Game Code\Headers\Screw.h" />
+    <ClInclude Include="Game Code\Headers\Spider.h" />
     <ClInclude Include="Game Code\Headers\Web.h" />
     <ClInclude Include="Game Code\Headers\Wood.h" />
   </ItemGroup>
