Changed back the collision code and added the tool wheel class

--- a/TheAdventuresOfJimmy.vcxproj.filters
+++ b/TheAdventuresOfJimmy.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClCompile Include="Game Code\Sources\Spider.cpp">
       <Filter>Game Code\Sources</Filter>
     </ClCompile>
+    <ClCompile Include="Game Code\Sources\Tool Wheel.cpp">
+      <Filter>Game Code\Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Headers\Animation.h">
@@ -131,6 +134,9 @@
       <Filter>Game Code\Headers</Filter>
     </ClInclude>
     <ClInclude Include="Game Code\Headers\Spider.h">
+      <Filter>Game Code\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Game Code\Headers\Tool Wheel.h">
       <Filter>Game Code\Headers</Filter>
     </ClInclude>
   </ItemGroup>
