--- a/TheAdventuresOfJimmy.vcxproj
+++ b/TheAdventuresOfJimmy.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Game Code\Sources\Player.cpp" />
     <ClCompile Include="Game Code\Sources\Screw.cpp" />
     <ClCompile Include="Game Code\Sources\Spider.cpp" />
+    <ClCompile Include="Game Code\Sources\Tool Wheel.cpp" />
     <ClCompile Include="Game Code\Sources\Web.cpp" />
     <ClCompile Include="Game Code\Sources\Wood.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="Game Code\Headers\Player.h" />
     <ClInclude Include="Game Code\Headers\Screw.h" />
     <ClInclude Include="Game Code\Headers\Spider.h" />
+    <ClInclude Include="Game Code\Headers\Tool Wheel.h" />
     <ClInclude Include="Game Code\Headers\Web.h" />
     <ClInclude Include="Game Code\Headers\Wood.h" />
   </ItemGroup>
