began adding text to track grid position

--- a/TheAdventuresOfJimmy.vcxproj
+++ b/TheAdventuresOfJimmy.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Framework\Sources\GameObject.cpp" />
     <ClCompile Include="Framework\Sources\SpriteObject.cpp" />
     <ClCompile Include="Framework\Sources\TextObject.cpp" />
+    <ClCompile Include="Game Code\Sources\checkPos.cpp" />
     <ClCompile Include="Game Code\Sources\Cog.cpp" />
     <ClCompile Include="Game Code\Sources\GridObject.cpp" />
     <ClCompile Include="Game Code\Sources\Ground.cpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Framework\Headers\GameObject.h" />
     <ClInclude Include="Framework\Headers\SpriteObject.h" />
     <ClInclude Include="Framework\Headers\TextObject.h" />
+    <ClInclude Include="Game Code\Headers\checkPos.h" />
     <ClInclude Include="Game Code\Headers\Cog.h" />
     <ClInclude Include="Game Code\Headers\GridObject.h" />
     <ClInclude Include="Game Code\Headers\Ground.h" />
