--- a/TheAdventuresOfJimmy.vcxproj.filters
+++ b/TheAdventuresOfJimmy.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="Game Code\Sources\Tool Wheel.cpp">
       <Filter>Game Code\Sources</Filter>
     </ClCompile>
+    <ClCompile Include="Game Code\Sources\checkPos.cpp">
+      <Filter>Game Code\Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Headers\Animation.h">
@@ -137,6 +140,9 @@
       <Filter>Game Code\Headers</Filter>
     </ClInclude>
     <ClInclude Include="Game Code\Headers\Tool Wheel.h">
+      <Filter>Game Code\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Game Code\Headers\checkPos.h">
       <Filter>Game Code\Headers</Filter>
     </ClInclude>
   </ItemGroup>
