--- a/TheAdventuresOfJimmy.vcxproj.filters
+++ b/TheAdventuresOfJimmy.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClCompile Include="Game Code\Sources\checkPos.cpp">
       <Filter>Game Code\Sources</Filter>
     </ClCompile>
+    <ClCompile Include="Game Code\Sources\Hamer.cpp">
+      <Filter>Game Code\Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Headers\Animation.h">
@@ -143,6 +146,9 @@
       <Filter>Game Code\Headers</Filter>
     </ClInclude>
     <ClInclude Include="Game Code\Headers\checkPos.h">
+      <Filter>Game Code\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Game Code\Headers\Hammer.h">
       <Filter>Game Code\Headers</Filter>
     </ClInclude>
   </ItemGroup>
