--- a/TheAdventuresOfJimmy.vcxproj
+++ b/TheAdventuresOfJimmy.vcxproj
@@ -141,7 +141,7 @@
     <ClCompile Include="Game Code\Sources\Cog.cpp" />
     <ClCompile Include="Game Code\Sources\GridObject.cpp" />
     <ClCompile Include="Game Code\Sources\Ground.cpp" />
-    <ClCompile Include="Game Code\Sources\Hamer.cpp" />
+    <ClCompile Include="Game Code\Sources\Hammer.cpp" />
     <ClCompile Include="Game Code\Sources\Ladder.cpp" />
     <ClCompile Include="Game Code\Sources\Level.cpp" />
     <ClCompile Include="Game Code\Sources\MovingObject.cpp" />
