--- a/TheAdventuresOfJimmy.vcxproj.filters
+++ b/TheAdventuresOfJimmy.vcxproj.filters
@@ -86,7 +86,7 @@
     <ClCompile Include="Game Code\Sources\checkPos.cpp">
       <Filter>Game Code\Sources</Filter>
     </ClCompile>
-    <ClCompile Include="Game Code\Sources\Hamer.cpp">
+    <ClCompile Include="Game Code\Sources\Hammer.cpp">
       <Filter>Game Code\Sources</Filter>
     </ClCompile>
   </ItemGroup>
