--- a/TheAdventuresOfJimmy.vcxproj.filters
+++ b/TheAdventuresOfJimmy.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClCompile Include="Game Code\Sources\Hammer.cpp">
       <Filter>Game Code\Sources</Filter>
     </ClCompile>
+    <ClCompile Include="Game Code\Sources\Exit.cpp">
+      <Filter>Game Code\Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Headers\Animation.h">
@@ -149,6 +152,9 @@
       <Filter>Game Code\Headers</Filter>
     </ClInclude>
     <ClInclude Include="Game Code\Headers\Hammer.h">
+      <Filter>Game Code\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Game Code\Headers\Exit.h">
       <Filter>Game Code\Headers</Filter>
     </ClInclude>
   </ItemGroup>
