--- a/TheAdventuresOfJimmy.vcxproj
+++ b/TheAdventuresOfJimmy.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{e6280fcf-9e89-422d-ad0b-6a3373703b90}</ProjectGuid>
     <RootNamespace>TheAdventuresOfJimmy</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -176,6 +176,13 @@
     <ClInclude Include="Game Code\Headers\Tool Wheel.h" />
     <ClInclude Include="Game Code\Headers\Web.h" />
     <ClInclude Include="Game Code\Headers\Wood.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="levels\Level BOTTOM.txt" />
+    <Text Include="levels\Level CENTER.txt" />
+    <Text Include="levels\Level LEFT.txt" />
+    <Text Include="levels\Level RIGHT.txt" />
+    <Text Include="levels\Level TOP.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
